--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,18 @@ readme = "README.md"
 repository = "https://github.com/Synphonyte/leptos-struct-table"
 
 [dependencies]
-leptos = { version = "0.6" }
+leptos = { version = "0.7.0-gamma3" }
 leptos-struct-table-macro = { version = "0.11.2" }
-leptos-use = "0.13"
+leptos-use = "0.14.0-gamma2"
 rust_decimal = { version = "1.35", optional = true }
 chrono = { version = "0.4", optional = true }
 serde = "1"
 time = { version = "0.3", optional = true, features = ["formatting"] }
-uuid = { version = "1", optional = true, features = [] }
+uuid = { version = "1.11.0", optional = true, features = [] }
 thiserror = "1"
-web-sys = "0.3.67"
+web-sys = "0.3.70"
 wasm-bindgen = "0.2"
+send_wrapper = { version = "0.6.0", features = ["futures"] }
 
 [features]
 chrono = ["dep:chrono"]
