--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 repository = "https://github.com/Synphonyte/leptos-struct-table"
 
 [dependencies]
-leptos = { version = "0.7.0-gamma3" }
+leptos = { version = "0.7.0-rc0" }
 leptos-struct-table-macro = { version = "0.11.2" }
 leptos-use = "0.14.0-gamma2"
-rust_decimal = { version = "1.35", optional = true }
+rust_decimal = { version = "1.36", optional = true }
 chrono = { version = "0.4", optional = true }
 serde = "1"
 time = { version = "0.3", optional = true, features = ["formatting"] }
